Add dockerfile for server

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,6 @@ RUN npm install
 
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# CMD ["npm", "run", "dev"]
 
-# CMD ["sh", "-c", "npm run build && npm start"]
+CMD ["sh", "-c", "npm run build && npm start"]
